grpc/k8s/k8s-nginx-product/minikube/k8s-4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-grpcnginx-product
  namespace: n-anderjvila-learning
spec:
  defaultBackend:
    service:
      name: grpcnginx-product-ip-service
      port:
        number: 9091
